# cilda

./: .gitignore  Makefile.am  README  cilda.desktop.in.in  cilda.ui  configure.ac  tilda.glade
po/: ca.po  cs.po  de.po  el.po  en_GB.po  es.po  fr.po  hu.po  it.po  pl.po  pt.po  pt_BR.po  ru.po  sk.po  sl.po  sv.po  tilda.pot  tr.po  zh_CN.po
src/: Makefile.am  cilda.c  configsys.c  debug.h  eggaccelerators.c  eggaccelerators.h  key_converter.c  key_grabber.c  tilda.c  tilda_terminal.c  tilda_window.c  tilda_window.h  tomboykeybinder.c  translation.h  wizard.c
